webtiles: Allow specifying -dir and CWD for games
This is required (rather than just adding -dir whatever to the options
section of game definitions) to allow the use of per-user game
directories, which is required for some buggy forks (DCSS Circus
Animals).

--- a/crawl-ref/source/webserver/games.d/base.yaml
+++ b/crawl-ref/source/webserver/games.d/base.yaml
@@ -9,6 +9,8 @@ games:
     ttyrec_path: ./rcs/ttyrecs/%n
     socket_path: ./rcs
     client_path: ./webserver/game_data/
+    # dir_path: .
+    # cwd: .
     morgue_url: None
     send_json_options: True
     options:
@@ -25,6 +27,8 @@ games:
     ttyrec_path: ./rcs/ttyrecs/%n
     socket_path: ./rcs
     client_path: ./webserver/game_data/
+    # dir_path: .
+    # cwd: .
     morgue_url: None
     send_json_options: True
     options:
@@ -41,6 +45,8 @@ games:
     ttyrec_path: ./rcs/ttyrecs/%n
     socket_path: ./rcs
     client_path: ./webserver/game_data/
+    # dir_path: .
+    # cwd: .
     morgue_url: None
     send_json_options: True
     options:
