webtiles: Allow per-game milestone path config
Milestone files are unique per-game, so let them be set as part of the
per-game configuration rather than an explicit top-level config
variable.

--- a/crawl-ref/source/webserver/games.d/base.yaml
+++ b/crawl-ref/source/webserver/games.d/base.yaml
@@ -12,6 +12,7 @@ games:
     # dir_path: .
     # cwd: .
     morgue_url: None
+    # milestone_path: ./rcs/milestones
     send_json_options: True
     options:
       - -seed
@@ -30,6 +31,7 @@ games:
     # dir_path: .
     # cwd: .
     morgue_url: None
+    # milestone_path: ./rcs/milestones
     send_json_options: True
     options:
       - -sprint
@@ -48,6 +50,7 @@ games:
     # dir_path: .
     # cwd: .
     morgue_url: None
+    # milestone_path: ./rcs/milestones
     send_json_options: True
     options:
       - -tutorial
