--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -174,6 +174,7 @@ jobs:
         build_type:
           - tiles
           - console
+          - installer
     steps:
       - uses: actions/checkout@v2
       - name: Checkout submodules (for crosscompile)
@@ -222,11 +223,24 @@ jobs:
         run: |
           ccache -s
           ls -l /usr/lib/ccache
-      - run: make -j$(nproc) CROSSHOST=i686-w64-mingw32 package-windows-zip-${{ matrix.build_type }}
+      - run: make -j$(nproc) CROSSHOST=i686-w64-mingw32 package-windows-${{ matrix.build_type }}
         working-directory: crawl-ref/source
       - name: Print ccache stats
         run: ccache -s
-      - name: Add build to release
+      - name: Determine release file names
+        if: github.event.release.tag_name != ''
+        id: release-names
+        run: |
+          if [[ ${{ matrix.build_type }} != installer ]] ; then
+            source='crawl-ref/source/stone_soup-latest-${{ matrix.build_type}}-win32.zip'
+            dest='dcss-$tag-win32-${{ matrix.build_type}}.zip'
+          else
+            source='crawl-ref/source/stone_soup-latest-win32-installer.exe'
+            dest='dcss-$tag-win32-installer.exe'
+          fi
+          echo "::set-output name=source::$source"
+          echo "::set-output name=dest::$dest"
+      - name: Add zip build to release
         if: github.event.release.tag_name != ''
         # Go back to the upstream action (svenstaro/upload-release-action) once this PR merges:
         # https://github.com/svenstaro/upload-release-action/pull/13
@@ -234,8 +248,8 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ github.ref }}
-          file: crawl-ref/source/stone_soup-latest-${{ matrix.build_type}}-win32.zip
-          asset_name: dcss-$tag-win32-${{ matrix.build_type}}.zip
+          file: ${{ steps.release-names.outputs.source }}
+          asset_name: ${{ steps.release-names.outputs.dest }}
 
   codecov_catch2:
     name: Catch2 (GCC/Linux) + Codecov
