Standardise text file TAG_MAJOR_VERSION comments
This will allow us to upgrade these files with a script, rather than by
hand.

--- a/crawl-ref/source/dat/species/deep-elf.yaml
+++ b/crawl-ref/source/dat/species/deep-elf.yaml
@@ -60,4 +60,6 @@ recommended_weapons:
   - SK_SHORT_BLADES
   - SK_STAVES
   - SK_BOWS
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
