--- a/crawl-ref/source/dat/species/barachi.yaml
+++ b/crawl-ref/source/dat/species/barachi.yaml
@@ -57,4 +57,6 @@ recommended_jobs:
   - JOB_SKALD
   - JOB_SUMMONER
   - JOB_ICE_ELEMENTALIST
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
