--- a/crawl-ref/source/dat/species/centaur.yaml
+++ b/crawl-ref/source/dat/species/centaur.yaml
@@ -59,4 +59,6 @@ recommended_jobs:
   - JOB_HUNTER
   - JOB_WARPER
   - JOB_ARCANE_MARKSMAN
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
