--- a/crawl-ref/source/dat/species/deep-dwarf.yaml
+++ b/crawl-ref/source/dat/species/deep-dwarf.yaml
@@ -74,4 +74,6 @@ recommended_weapons:
   - SK_LONG_BLADES
   - SK_CROSSBOWS
   - SK_SLINGS
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
