--- a/crawl-ref/source/dat/species/demonspawn.yaml
+++ b/crawl-ref/source/dat/species/demonspawn.yaml
@@ -47,4 +47,6 @@ recommended_jobs:
   - JOB_FIRE_ELEMENTALIST
   - JOB_ICE_ELEMENTALIST
   - JOB_VENOM_MAGE
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
