--- a/crawl-ref/source/dat/species/deprecated-draconian-mottled.yaml
+++ b/crawl-ref/source/dat/species/deprecated-draconian-mottled.yaml
@@ -37,4 +37,6 @@ fake_mutations:
   - long: You can spit globs of burning liquid.
     short: breathe sticky flame splash
   - long: You can ignite nearby creatures when you spit burning liquid.
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
