--- a/crawl-ref/source/dat/species/draconian-base.yaml
+++ b/crawl-ref/source/dat/species/draconian-base.yaml
@@ -37,4 +37,6 @@ recommended_jobs:
   - JOB_AIR_ELEMENTALIST
   - JOB_EARTH_ELEMENTALIST
   - JOB_VENOM_MAGE
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
