--- a/crawl-ref/source/dat/species/draconian-black.yaml
+++ b/crawl-ref/source/dat/species/draconian-black.yaml
@@ -40,4 +40,6 @@ mutations:
 fake_mutations:
   - long: You can breathe wild blasts of lightning.
     short: breathe lightning
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
