--- a/crawl-ref/source/dat/species/draconian-grey.yaml
+++ b/crawl-ref/source/dat/species/draconian-grey.yaml
@@ -39,4 +39,6 @@ mutations:
 fake_mutations:
   - long: You can walk through water.
     short: walk through water
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
