--- a/crawl-ref/source/dat/species/draconian-pale.yaml
+++ b/crawl-ref/source/dat/species/draconian-pale.yaml
@@ -37,4 +37,6 @@ mutations:
 fake_mutations:
   - long: You can breathe blasts of scalding, opaque steam.
     short: breathe steam
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
