--- a/crawl-ref/source/dat/species/draconian-purple.yaml
+++ b/crawl-ref/source/dat/species/draconian-purple.yaml
@@ -35,4 +35,6 @@ mutations:
 fake_mutations:
   - long: You can breathe bolts of dispelling energy.
     short: breathe power
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
