--- a/crawl-ref/source/dat/species/draconian-white.yaml
+++ b/crawl-ref/source/dat/species/draconian-white.yaml
@@ -39,4 +39,6 @@ fake_mutations:
   - long: You can breathe waves of freezing cold.
     short: breathe frost
   - long: You can buffet flying creatures when you breathe cold.
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
