--- a/crawl-ref/source/dat/species/draconian-yellow.yaml
+++ b/crawl-ref/source/dat/species/draconian-yellow.yaml
@@ -38,4 +38,6 @@ mutations:
 fake_mutations:
   - long: You can spit globs of acid.
     short: spit acid
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
