--- a/crawl-ref/source/dat/species/ghoul.yaml
+++ b/crawl-ref/source/dat/species/ghoul.yaml
@@ -72,4 +72,6 @@ recommended_weapons:
   - SK_BOWS
   - SK_CROSSBOWS
   - SK_SLINGS
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
