--- a/crawl-ref/source/dat/species/halfling.yaml
+++ b/crawl-ref/source/dat/species/halfling.yaml
@@ -51,4 +51,6 @@ recommended_weapons:
   - SK_LONG_BLADES
   - SK_AXES
   - SK_SLINGS
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
