--- a/crawl-ref/source/dat/species/hill-orc.yaml
+++ b/crawl-ref/source/dat/species/hill-orc.yaml
@@ -53,4 +53,6 @@ recommended_weapons:
   - SK_LONG_BLADES
   - SK_AXES
   - SK_POLEARMS
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
