--- a/crawl-ref/source/dat/species/kobold.yaml
+++ b/crawl-ref/source/dat/species/kobold.yaml
@@ -45,4 +45,6 @@ recommended_weapons:
   - SK_MACES_FLAILS
   - SK_STAVES
   - SK_CROSSBOWS
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
