--- a/crawl-ref/source/dat/species/merfolk.yaml
+++ b/crawl-ref/source/dat/species/merfolk.yaml
@@ -59,4 +59,6 @@ recommended_jobs:
 recommended_weapons:
   - SK_POLEARMS
   - SK_LONG_BLADES
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
