--- a/crawl-ref/source/dat/species/mummy.yaml
+++ b/crawl-ref/source/dat/species/mummy.yaml
@@ -64,4 +64,6 @@ recommended_jobs:
   - JOB_ICE_ELEMENTALIST
   - JOB_FIRE_ELEMENTALIST
   - JOB_SUMMONER
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
