--- a/crawl-ref/source/dat/species/naga.yaml
+++ b/crawl-ref/source/dat/species/naga.yaml
@@ -47,6 +47,9 @@ recommended_jobs:
   - JOB_WARPER
   - JOB_WIZARD
   - JOB_VENOM_MAGE
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
+
 walking_verb: Slid
 altar_action: coil in front of
