--- a/crawl-ref/source/dat/species/octopode.yaml
+++ b/crawl-ref/source/dat/species/octopode.yaml
@@ -41,6 +41,9 @@ recommended_jobs:
   - JOB_FIRE_ELEMENTALIST
   - JOB_EARTH_ELEMENTALIST
   - JOB_VENOM_MAGE
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
+
 walking_verb: Wriggl
 altar_action: curl up in front of
