--- a/crawl-ref/source/dat/species/ogre.yaml
+++ b/crawl-ref/source/dat/species/ogre.yaml
@@ -57,4 +57,6 @@ recommended_weapons:
   - SK_POLEARMS
   - SK_STAVES
   - SK_AXES
+# start TAG_MAJOR_VERSION == 34
 create_enum: false
+# end TAG_MAJOR_VERSION
